--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -24,25 +24,25 @@
 <section class="product-section">
   <div class="container">
     <div class="back-link">
-      <a routerLink="/category"> &lt;&lt; Back to Category</a>
+      <a routerLink="/category/{{product.cat}}"> &lt;&lt; Back to Category</a>
     </div>
     <div class="row">
       <div class="col-lg-6">
         <div class="product-pic-zoom">
-          <img class="product-big-img" src="./assets/img/single-product/1.jpg" alt="">
+          <img class="product-big-img" src="{{product.ph[0]}}" alt="">
         </div>
         <div class="product-thumbs" tabindex="1" style="overflow: hidden; outline: none;">
           <div class="product-thumbs-track">
-            <div class="pt active" data-imgbigurl="img/single-product/1.jpg"><img src="./assets/img/single-product/thumb-1.jpg" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/2.jpg"><img src="./assets/img/single-product/thumb-2.jpg" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/3.jpg"><img src="./assets/img/single-product/thumb-3.jpg" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/4.jpg"><img src="./assets/img/single-product/thumb-4.jpg" alt=""></div>
+            <div class="pt active" data-imgbigurl="img/single-product/1.jpg"><img src="{{product.ph[0]}}" alt=""></div>
+            <div class="pt" data-imgbigurl="img/single-product/2.jpg"><img src="{{product.ph[1]}}" alt=""></div>
+            <div class="pt" data-imgbigurl="img/single-product/3.jpg"><img src="{{product.ph[2]}}" alt=""></div>
+            <div class="pt" data-imgbigurl="img/single-product/4.jpg"><img src="{{product.ph[3]}}" alt=""></div>
           </div>
         </div>
       </div>
       <div class="col-lg-6 product-details">
-        <h2 class="p-title">Title</h2>
-        <h3 class="p-price">$39.90</h3>
+        <h2 class="p-title">{{product.n}}</h2>
+        <h3 class="p-price">€{{product.pr}}</h3>
         <h4 class="p-stock">Available: <span>In Stock</span></h4>
         <div class="p-rating">
           <i class="fa fa-star-o"></i>
@@ -54,41 +54,24 @@
         <div class="p-review">
           <a href="">3 reviews</a>|<a href="">Add your review</a>
         </div>
+
         <div class="fw-size-choose">
           <p>Size</p>
-          <div class="sc-item">
-            <input type="radio" name="sc" id="xs-size">
-            <label for="xs-size">32</label>
-          </div>
-          <div class="sc-item">
-            <input type="radio" name="sc" id="s-size">
-            <label for="s-size">34</label>
-          </div>
-          <div class="sc-item">
-            <input type="radio" name="sc" id="m-size" checked="">
-            <label for="m-size">36</label>
-          </div>
-          <div class="sc-item">
-            <input type="radio" name="sc" id="l-size">
-            <label for="l-size">38</label>
-          </div>
-          <div class="sc-item disable">
-            <input type="radio" name="sc" id="xl-size" disabled>
-            <label for="xl-size">40</label>
-          </div>
-          <div class="sc-item">
-            <input type="radio" name="sc" id="xxl-size">
-            <label for="xxl-size">42</label>
+          <div class="sc-item" id="divs-{{size.key}}" *ngFor="let size of product.sizes | keyvalue">
+            <input type="radio" name="sc" id="size-{{size.key}}" (change)="quantityChanged(size)">{{checkIfDisabled(size.value, size.key)}}
+            <label for="size-{{size.key}}">{{size.key}}</label>
           </div>
         </div>
+
         <div class="quantity">
           <p>Quantity</p>
           <div class="pro-qty">
-            <span class="dec qtybtn">-</span>
-            <input type="text" value="1">
-            <span class="inc qtybtn">+</span>
+            <span class="qtybtn" (click)="incrementQuantity(false)">-</span>
+            <input id="quantity-input" type="text" value="1" min="1">
+            <span class="qtybtn" (click)="incrementQuantity(true)">+</span>
           </div>
         </div>
+
         <a href="#" class="site-btn">SHOP NOW</a>
         <div id="accordion" class="accordion-area">
           <div class="panel">
