--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -13,7 +13,8 @@
     <h4>CAtegory PAge</h4>
     <div class="site-pagination">
       <a href="">Home</a> /
-      <a href="">Shop</a> /
+      <a href="">Catalog</a> /
+      <a routerLink="/category/{{categoryName}}">{{categoryName}}</a>
     </div>
   </div>
 </div>
