cart functions added

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -95,19 +95,24 @@
               </tbody>
             </table>
           </div>
+
           <div class="total-cost">
             <h6>Total <span>$99.90</span></h6>
           </div>
         </div>
       </div>
+
+      <!--right side buttons: checkout, shopping-->
+
       <div class="col-lg-4 card-right">
-        <form class="promo-code-form">
-          <input type="text" placeholder="Enter promo code">
-          <button>Submit</button>
-        </form>
+        <!--<form class="promo-code-form">-->
+          <!--<input type="text" placeholder="Enter promo code">-->
+          <!--<button>Submit</button>-->
+        <!--</form>-->
         <a routerLink="/checkout" class="site-btn">Proceed to checkout</a>
         <a href="" class="site-btn sb-dark">Continue shopping</a>
       </div>
+
     </div>
   </div>
 </section>
