--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -38,59 +38,25 @@
               </tr>
               </thead>
               <tbody>
-              <tr>
+              <tr *ngFor="let item of cartItems; let i = index">
                 <td class="product-col">
-                  <img src="./assets/img/cart/1.jpg" alt="">
+                  <img src="{{item.item.ph[0]}}" alt="">
                   <div class="pc-title">
-                    <h4>Animal Print Dress</h4>
-                    <p>$45.90</p>
+                    <h4>{{item.item.n}}</h4>
+                    <p>€{{item.item.pr}}</p>
                   </div>
                 </td>
                 <td class="quy-col">
                   <div class="quantity">
                     <div class="pro-qty">
-                      <input type="text" value="1">
+                      <span class="qtybtn" (click)="incrementQuantity(false, i, item)">-</span>
+                        <input id="quantity-input-{{i}}" type="text" value="{{item.quantity}}">
+                      <span class="qtybtn" (click)="incrementQuantity(true, i, item)">+</span>
                     </div>
                   </div>
                 </td>
-                <td class="size-col"><h4>Size M</h4></td>
-                <td class="total-col"><h4>$45.90</h4></td>
-              </tr>
-              <tr>
-                <td class="product-col">
-                  <img src="./assets/img/cart/2.jpg" alt="">
-                  <div class="pc-title">
-                    <h4>Ruffle Pink Top</h4>
-                    <p>$45.90</p>
-                  </div>
-                </td>
-                <td class="quy-col">
-                  <div class="quantity">
-                    <div class="pro-qty">
-                      <input type="text" value="1">
-                    </div>
-                  </div>
-                </td>
-                <td class="size-col"><h4>Size M</h4></td>
-                <td class="total-col"><h4>$45.90</h4></td>
-              </tr>
-              <tr>
-                <td class="product-col">
-                  <img src="./assets/img/cart/3.jpg" alt="">
-                  <div class="pc-title">
-                    <h4>Skinny Jeans</h4>
-                    <p>$45.90</p>
-                  </div>
-                </td>
-                <td class="quy-col">
-                  <div class="quantity">
-                    <div class="pro-qty">
-                      <input type="text" value="1">
-                    </div>
-                  </div>
-                </td>
-                <td class="size-col"><h4>Size M</h4></td>
-                <td class="total-col"><h4>$45.90</h4></td>
+                <td class="size-col"><h4>{{item.size}}</h4></td>
+                <td class="total-col"><h4>€{{item.item.pr}}</h4></td>
               </tr>
               </tbody>
             </table>
