--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -149,7 +149,9 @@
 
       <div class="col-lg-9  order-1 order-lg-2 mb-5 mb-lg-0">
         <div class="row">
-
+          <div class="col-sm-12 text-center">
+            <img *ngIf="loading" src="./assets/img/my-spinner.gif" class="center-block"/>
+          </div>
           <div *ngFor="let item of items; let i = index" class="col-lg-4 col-sm-6">
             <div class="product-item">
 
