--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -79,7 +79,7 @@
           </div>
         </div>
 
-        <a href="#" class="site-btn">SHOP NOW</a>
+        <a class="site-btn" (click)="addItemToCart()">Add to Cart</a>
         <div id="accordion" class="accordion-area">
           <div class="panel">
             <div class="panel-header" id="headingOne">
