--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -160,9 +160,9 @@
 
                 <div id="itemTypeLabel{{i}}">{{setSaleAndNewLabels(item, i)}}</div>
                 <!--<img src="../assets/img/product/6.jpg" alt="">-->
-                <img src="{{item.ph[0]}}" alt="" >
+                <img src="{{item.img}}" alt="" >
                 <div class="pi-links">
-                  <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
+                  <a class="add-card"><i class="flaticon-bag" (click)="addToCart(item, i); $event.stopPropagation()"></i><span>ADD TO CART</span></a>
                   <a class="wishlist-btn"><i id="wishlist-icon-{{i}}" class="flaticon-heart" (click)="addToWishlist(item, i); $event.stopPropagation()">{{setWishlistIcons(item, i)}}</i></a>
                 </div>
 
