sorting by size

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -19,9 +19,9 @@
 </div>
 <!-- Page info end -->
 
-<p>
-  about us works!
-</p>
+<div class="container">
+  <h6>Bubble Baby is a small online family business based in Cork. Our online shop is specialized in <a routerLink="/category/Clothing">baby clothes</a> under 12 months, baby’s room and sleep equipments and accessories such as cot bumpers, cot and room decoration , soft and stylish newborn nests etc. Also we have in our range gift and toys for tiny tots.  We offer to our customers the best price range. If you have any questions just simple email or call us , we always happy to help with any query  about our shop. </h6>
+</div>
 
 <app-footer-section></app-footer-section>
 
