--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -26,138 +26,170 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3 order-2 order-lg-1">
+
+        <!--Category filter-->
         <div class="filter-widget">
           <h2 class="fw-title">Categories</h2>
           <ul class="category-menu">
-            <li><a href="#">Woman wear</a>
-              <ul class="sub-menu">
-                <li><a href="#">Midi Dresses <span>(2)</span></a></li>
-                <li><a href="#">Maxi Dresses<span>(56)</span></a></li>
-                <li><a href="#">Prom Dresses<span>(36)</span></a></li>
-                <li><a href="#">Little Black Dresses <span>(27)</span></a></li>
-                <li><a href="#">Mini Dresses<span>(19)</span></a></li>
-              </ul>
-            </li>
-            <li><a href="#">Man Wear</a>
-              <ul class="sub-menu">
-                <li><a href="#">Midi Dresses <span>(2)</span></a></li>
-                <li><a href="#">Maxi Dresses<span>(56)</span></a></li>
-                <li><a href="#">Prom Dresses<span>(36)</span></a></li>
-              </ul></li>
-            <li><a href="#">Children</a></li>
-            <li><a href="#">Bags & Purses</a></li>
-            <li><a href="#">Eyewear</a></li>
-            <li><a href="#">Footwear</a></li>
+            <!--<li><a href="#">Woman wear</a>-->
+              <!--<ul class="sub-menu">-->
+                <!--<li><a href="#">Midi Dresses <span>(2)</span></a></li>-->
+                <!--<li><a href="#">Maxi Dresses<span>(56)</span></a></li>-->
+                <!--<li><a href="#">Prom Dresses<span>(36)</span></a></li>-->
+                <!--<li><a href="#">Little Black Dresses <span>(27)</span></a></li>-->
+                <!--<li><a href="#">Mini Dresses<span>(19)</span></a></li>-->
+              <!--</ul>-->
+            <!--</li>-->
+            <!--<li><a href="#">Man Wear</a>-->
+              <!--<ul class="sub-menu">-->
+                <!--<li><a href="#">Midi Dresses <span>(2)</span></a></li>-->
+                <!--<li><a href="#">Maxi Dresses<span>(56)</span></a></li>-->
+                <!--<li><a href="#">Prom Dresses<span>(36)</span></a></li>-->
+              <!--</ul>-->
+            <!--</li>-->
+            <li><a routerLink="/category/Clothing">Clothing</a></li>
+            <li><a routerLink="/category/Nursery">Nursery</a></li>
+            <li><a routerLink="/category/Bath">Bath</a></li>
           </ul>
         </div>
+
+        <!--Price filter slider-->
         <div class="filter-widget mb-0">
           <h2 class="fw-title">refine by</h2>
           <div class="price-range-wrap">
             <h4>Price</h4>
-            <div class="price-range ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content" data-min="10" data-max="270">
-              <div class="ui-slider-range ui-corner-all ui-widget-header" style="left: 0%; width: 100%;"></div>
-              <span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 0%;">
-								</span>
-              <span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 100%;">
-								</span>
+            <!--<div class="price-range ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content" data-min="10" data-max="270">-->
+              <!--<div class="ui-slider-range ui-corner-all ui-widget-header" style="left: 0%; width: 100%;"></div>-->
+              <!--<span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 0%;">-->
+								<!--</span>-->
+              <!--<span tabindex="0" class="ui-slider-handle ui-corner-all ui-state-default" style="left: 100%;">-->
+								<!--</span>-->
+            <!--</div>-->
+            <!--<div class="range-slider">-->
+              <!--<div class="price-input">-->
+                <!--<input type="text" id="minamount">-->
+                <!--<input type="text" id="maxamount">-->
+              <!--</div>-->
+            <!--</div>-->
+
+            <div data-role="main" class="ui-content">
+              <form method="post" action="/action_page_post.php">
+                <div data-role="rangeslider">
+                  <input type="range" name="price-min" id="price-min" value="0" min="0" max="1000">
+                  <input type="range" name="price-max" id="price-max" value="1000" min="0" max="1000">
+                </div>
+                <input type="submit" data-inline="true" value="Apply">
+              </form>
             </div>
-            <div class="range-slider">
-              <div class="price-input">
-                <input type="text" id="minamount">
-                <input type="text" id="maxamount">
-              </div>
-            </div>
+
           </div>
         </div>
-        <div class="filter-widget mb-0">
-          <h2 class="fw-title">color by</h2>
-          <div class="fw-color-choose">
-            <div class="cs-item">
-              <input type="radio" name="cs" id="gray-color">
-              <label class="cs-gray" for="gray-color">
-                <span>(3)</span>
-              </label>
-            </div>
-            <div class="cs-item">
-              <input type="radio" name="cs" id="orange-color">
-              <label class="cs-orange" for="orange-color">
-                <span>(25)</span>
-              </label>
-            </div>
-            <div class="cs-item">
-              <input type="radio" name="cs" id="yollow-color">
-              <label class="cs-yollow" for="yollow-color">
-                <span>(112)</span>
-              </label>
-            </div>
-            <div class="cs-item">
-              <input type="radio" name="cs" id="green-color">
-              <label class="cs-green" for="green-color">
-                <span>(75)</span>
-              </label>
-            </div>
-            <div class="cs-item">
-              <input type="radio" name="cs" id="purple-color">
-              <label class="cs-purple" for="purple-color">
-                <span>(9)</span>
-              </label>
-            </div>
-            <div class="cs-item">
-              <input type="radio" name="cs" id="blue-color" checked="">
-              <label class="cs-blue" for="blue-color">
-                <span>(29)</span>
-              </label>
-            </div>
-          </div>
-        </div>
+
+        <!--Color filter-->
+        <!--<div class="filter-widget mb-0">-->
+          <!--<h2 class="fw-title">color by</h2>-->
+          <!--<div class="fw-color-choose">-->
+            <!--<div class="cs-item">-->
+              <!--<input type="radio" name="cs" id="gray-color">-->
+              <!--<label class="cs-gray" for="gray-color">-->
+                <!--<span>(3)</span>-->
+              <!--</label>-->
+            <!--</div>-->
+            <!--<div class="cs-item">-->
+              <!--<input type="radio" name="cs" id="orange-color">-->
+              <!--<label class="cs-orange" for="orange-color">-->
+                <!--<span>(25)</span>-->
+              <!--</label>-->
+            <!--</div>-->
+            <!--<div class="cs-item">-->
+              <!--<input type="radio" name="cs" id="yollow-color">-->
+              <!--<label class="cs-yollow" for="yollow-color">-->
+                <!--<span>(112)</span>-->
+              <!--</label>-->
+            <!--</div>-->
+            <!--<div class="cs-item">-->
+              <!--<input type="radio" name="cs" id="green-color">-->
+              <!--<label class="cs-green" for="green-color">-->
+                <!--<span>(75)</span>-->
+              <!--</label>-->
+            <!--</div>-->
+            <!--<div class="cs-item">-->
+              <!--<input type="radio" name="cs" id="purple-color">-->
+              <!--<label class="cs-purple" for="purple-color">-->
+                <!--<span>(9)</span>-->
+              <!--</label>-->
+            <!--</div>-->
+            <!--<div class="cs-item">-->
+              <!--<input type="radio" name="cs" id="blue-color" checked="">-->
+              <!--<label class="cs-blue" for="blue-color">-->
+                <!--<span>(29)</span>-->
+              <!--</label>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+
+        <!--Size filter-->
         <div class="filter-widget mb-0">
           <h2 class="fw-title">Size</h2>
           <div class="fw-size-choose">
             <div class="sc-item">
-              <input type="radio" name="sc" id="xs-size">
-              <label for="xs-size">0-3</label>
+              <input type="checkbox" name="sc" id="0-3" (click)="filterElements('0-3')">
+              <label for="0-3">0-3</label>
             </div>
             <div class="sc-item">
-              <input type="radio" name="sc" id="s-size">
-              <label for="s-size">3-6</label>
+              <input type="checkbox" name="sc" id="3-6" (click)="filterElements('3-6')">
+              <label for="3-6" >3-6</label>
             </div>
             <div class="sc-item">
-              <input type="radio" name="sc" id="m-size"  checked="">
-              <label for="m-size">6-9</label>
+              <input type="checkbox" name="sc" id="6-9" (click)="filterElements('6-9')">
+              <label for="6-9">6-9</label>
             </div>
             <div class="sc-item">
-              <input type="radio" name="sc" id="l-size">
-              <label for="l-size">9-12</label>
+              <input type="checkbox" name="sc" id="9-12" (click)="filterElements('9-12')">
+              <label for="9-12">9-12</label>
             </div>
             <div class="sc-item">
-              <input type="radio" name="sc" id="xl-size">
-              <label for="xl-size">12-18</label>
+              <input type="checkbox" name="sc" id="12-18" (click)="filterElements('12-18')">
+              <label for="12-18">12-18</label>
             </div>
           </div>
         </div>
-        <div class="filter-widget">
-          <h2 class="fw-title">Brand</h2>
-          <ul class="category-menu">
-            <li><a href="#">Abercrombie & Fitch <span>(2)</span></a></li>
-            <li><a href="#">Asos<span>(56)</span></a></li>
-            <li><a href="#">Bershka<span>(36)</span></a></li>
-            <li><a href="#">Missguided<span>(27)</span></a></li>
-            <li><a href="#">Zara<span>(19)</span></a></li>
-          </ul>
-        </div>
+
+        <!--Brand filter-->
+        <!--<div class="filter-widget">-->
+          <!--<h2 class="fw-title">Brand</h2>-->
+          <!--<ul class="category-menu">-->
+            <!--<li><a href="#">Abercrombie & Fitch <span>(2)</span></a></li>-->
+            <!--<li><a href="#">Asos<span>(56)</span></a></li>-->
+            <!--<li><a href="#">Bershka<span>(36)</span></a></li>-->
+            <!--<li><a href="#">Missguided<span>(27)</span></a></li>-->
+            <!--<li><a href="#">Zara<span>(19)</span></a></li>-->
+          <!--</ul>-->
+        <!--</div>-->
       </div>
 
       <div class="col-lg-9  order-1 order-lg-2 mb-5 mb-lg-0">
+
+        <!--Sort dropdown menu-->
+        <div>
+          <form>
+            <select id="select-sort" name = "dropdown" (change)="sortElements()">
+              <option value = "Recommended" selected>Recommended</option>
+              <option value = "New">New</option>
+              <option value = "High to low">High to low</option>
+              <option value = "Low to high">Low to high</option>
+            </select>
+          </form>
+        </div>
+
         <div class="row">
           <div class="col-sm-12 text-center">
             <img *ngIf="loading" src="./assets/img/my-spinner.gif" class="center-block"/>
           </div>
-          <div *ngFor="let item of items; let i = index" class="col-lg-4 col-sm-6">
+          <div *ngFor="let item of sortedItems; let i = index" class="col-lg-4 col-sm-6">
             <div class="product-item">
 
               <div class="pi-pic" (click)="navigateToProductDetails(item)">
-                <!--<a routerLink="/product/{{item.id}}">-->
-
                 <div id="itemTypeLabel{{i}}">{{setSaleAndNewLabels(item, i)}}</div>
                 <!--<img src="../assets/img/product/6.jpg" alt="">-->
                 <img src="{{item.img}}" alt="" >
@@ -165,9 +197,6 @@
                   <a class="add-card"><i class="flaticon-bag" (click)="addToCart(item, i); $event.stopPropagation()"></i><span>ADD TO CART</span></a>
                   <a class="wishlist-btn"><i id="wishlist-icon-{{i}}" class="flaticon-heart" (click)="addToWishlist(item, i); $event.stopPropagation()">{{setWishlistIcons(item, i)}}</i></a>
                 </div>
-
-                <!--</a>-->
-
               </div>
 
               <div class="pi-text">
@@ -178,10 +207,10 @@
           </div>
 
 
-
-          <div class="text-center w-100 pt-3">
-            <button class="site-btn sb-line sb-dark">LOAD MORE</button>
-          </div>
+          <!--Load more button-->
+          <!--<div class="text-center w-100 pt-3">-->
+            <!--<button class="site-btn sb-line sb-dark">LOAD MORE</button>-->
+          <!--</div>-->
         </div>
       </div>
     </div>
