--- a/src/app/footer-section/footer-section.component.html
+++ b/src/app/footer-section/footer-section.component.html
@@ -2,13 +2,13 @@
 <section class="footer-section">
   <div class="container">
     <div class="footer-logo text-center">
-      <a href="index.html"><img src="./assets/img/logo-light.png" alt=""></a>
+      <a routerLink="/"><img src="../assets/img/logo.png" alt="" style="width: 30%"></a>
     </div>
     <div class="row">
       <div class="col-md-5">
         <div class="footer-widget about-widget">
           <h2>About</h2>
-          <p>Donec vitae purus nunc. Morbi faucibus erat sit amet congue mattis. Nullam frin-gilla faucibus urna, id dapibus erat iaculis ut. Integer ac sem.</p>
+          <p>Bubble Baby is a small online family business based in Cork. Our online shop is specialized in baby clothes under 12 months, baby’s room and sleep equipments and accessories such as cot bumpers, cot and room decoration , soft and stylish newborn nests etc. Also we have in our range gift and toys for tiny tots.  We offer to our customers the best price range. If you have any questions just simple email or call us , we always happy to help with any query  about our shop. </p>
           <img src="./assets/img/cards.png" alt="">
         </div>
       </div>
@@ -82,7 +82,7 @@
       </div>
 
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      <p class="text-white text-center mt-5">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+      <p class="text-black text-center mt-2">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
     </div>
