--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -42,7 +42,6 @@
             <div class="pt active" data-imgbigurl="img/single-product/1.jpg"><img src="{{product.ph[0]}}" alt=""></div>
             <div class="pt" data-imgbigurl="img/single-product/2.jpg"><img src="{{product.ph[1]}}" alt=""></div>
             <div class="pt" data-imgbigurl="img/single-product/3.jpg"><img src="{{product.ph[2]}}" alt=""></div>
-            <div class="pt" data-imgbigurl="img/single-product/4.jpg"><img src="{{product.ph[3]}}" alt=""></div>
           </div>
         </div>
       </div>
@@ -80,7 +79,12 @@
         </div>
 
         <a class="site-btn" (click)="addItemToCart()">Add to Cart</a>
+        <div id="error-view" style="display: none">Sorry, we cannot reserve any more as you have added the maximum allowed</div>
+
+        <!--Item description-->
         <div id="accordion" class="accordion-area">
+
+          <!--Main description-->
           <div class="panel">
             <div class="panel-header" id="headingOne">
               <button class="panel-link" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">information</button>
@@ -94,6 +98,8 @@
               </div>
             </div>
           </div>
+
+          <!--Care details-->
           <div class="panel">
             <div class="panel-header" id="headingTwo">
               <button class="panel-link" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapse2">care details </button>
@@ -105,6 +111,7 @@
               </div>
             </div>
           </div>
+
         </div>
         <div class="social-sharing">
           <a href=""><i class="fa fa-google-plus"></i></a>
